add readme, openapi spec, postman collection with sample requests, default application.properties
