# funqy-http-kryptonite/src/main/resources/META-INF/openapi.yml
@@ -1,16 +1,25 @@
-openapi: 3.0.1
+openapi: 3.0.3
 info:
   title: Kryptonite for Kafka's HTTP API
   description: Open API spec for the Cipher Field Resource based on Quarkus Funqy
   version: "0.1.0"
+  license:
+    name: Apache 2.0
+    url: http://www.apache.org/licenses/LICENSE-2.0.html
 
 servers:
   - url: http://localhost:8080
     description: (dev mode server)
-
+tags:
+  - name: encryption
+    description: endpoints for encrypting payloads or fields thereof
+  - name: decryption
+    description: endpoints for decrypting payloads or fields thereof
 paths:
-  /encrypt-value:
+  /encrypt/value:
     post:
+      tags:
+        - encryption
       requestBody:
         description: The request body may contain any value representing a valid JSON type (string, number, boolean, array, object, null).
         content:
@@ -22,19 +31,21 @@ paths:
                 - type: boolean
                 - type: array
                   items:
-                    AnyValue: {}
+                    type: object
                 - type: object
                   nullable: true
       responses:
         200:
-          description: The Base64 encoded ciphertext using the default `CipherFieldResource` encryption settings.
+          description: The Base64 encoded ciphertext using the `CipherFieldResource` encryption settings as stated in `application.properties`.
           content:
             application/json:
               schema:
                 type: string
 
-  /encrypt-array-elements:
+  /encrypt/array-elements:
     post:
+      tags:
+        - encryption
       requestBody:
         description: The request body may contain a JSON array containing elements with any valid JSON type (string, number, boolean, array, object, null).
         content:
@@ -42,11 +53,11 @@ paths:
             schema:
               type: array
               items:
-                AnyValue: {}
+                type: object
                 nullable: true
       responses:
         200:
-          description: The JSON array containing the Base64 encoded ciphertexts of all elements using the default `CipherFieldResource` encryption settings.
+          description: The JSON array containing the Base64 encoded ciphertexts of all elements using the `CipherFieldResource` encryption settings as stated in `application.properties`.
           content:
             application/json:
               schema:
@@ -54,8 +65,10 @@ paths:
                 items:
                   type: string
 
-  /encrypt-map-entries:
+  /encrypt/map-entries:
     post:
+      tags:
+        - encryption
       requestBody:
         description: The request body may contain a JSON object containing properties with any valid JSON type (string, number, boolean, array, object, null).
         content:
@@ -64,14 +77,16 @@ paths:
               type: object
       responses:
         200:
-          description: The JSON object containing the Base64 encoded ciphertexts of all properties using the default `CipherFieldResource` encryption settings.
+          description: The JSON object containing the Base64 encoded ciphertexts of all properties using the `CipherFieldResource` encryption settings as stated in `application.properties`.
           content:
             application/json:
               schema:
                 type: object
 
-  /encrypt-value-with-config:
+  /encrypt/value-with-config:
     post:
+      tags:
+        - encryption
       requestBody:
         description: The request body may contain a JSON object containing a `data` property of type JSON object which itself may contain properties of any valid JSON type (string, number, boolean, array, object, null). Additionally, the JSON object can define an optional `fieldConfig` property, which is an array containing individual configuration to apply specific encryption settings for particular properties found in the `data` property.
         content:
@@ -87,14 +102,16 @@ paths:
                     $ref: '#/components/schemas/FieldConfig'      
       responses:
         200:
-          description: The JSON object containing the Base64 encoded ciphertexts of all properties using the settings as provided in the `fieldConfig` array of the request body and/or the default `CipherFieldResource` encryption settings.
+          description: The JSON object containing the Base64 encoded ciphertexts of all properties using the settings as provided in the `fieldConfig` array of the request body and/or the `CipherFieldResource` encryption settings as stated in `application.properties`.
           content:
             application/json:
               schema:
                 type: object
 
-  /decrypt-value:
+  /decrypt/value:
     post:
+      tags:
+        - decryption
       requestBody:
         description: The request body must contain a valid Base64 encoded string representing the ciphertext of an encrypted value.
         content:
@@ -113,12 +130,14 @@ paths:
                   - type: boolean
                   - type: array
                     items:
-                      AnyValue: {}
+                      type: object
                   - type: object
                     nullable: true
 
-  /decrypt-array-elements:
+  /decrypt/array-elements:
     post:
+      tags:
+        - decryption
       requestBody:
         description: The request body may contain a JSON array containing elements of type string. Each element is expected to be a valid Base64 encoded string representing the ciphertext of an encrypted value.
         content:
@@ -136,11 +155,13 @@ paths:
               schema:
                 type: array
                 items:
-                  AnyValue: {}
+                  type: object
                   nullable: true
 
-  /decrypt-map-entries:
+  /decrypt/map-entries:
     post:
+      tags:
+        - decryption
       requestBody:
         description: The request body may contain a JSON object containing properties of type string. Each property is expected to be a valid Base64 encoded string representing the ciphertext of an encrypted value.
         content:
@@ -155,8 +176,10 @@ paths:
               schema:
                 type: object
 
-  /decrypt-value-with-config:
+  /decrypt/value-with-config:
     post:
+      tags:
+        - decryption
       requestBody:
         description: The request body may contain a JSON object containing a `data` property of type JSON object which itself may contain properties of any valid JSON type (string, number, boolean, array, object, null). Additionally, the JSON object can define an optional `fieldConfig` property, which is an array containing individual configuration to apply specific decryption settings for particular properties found in the `data` property.
         content:
